objects/sf42_Deactivate_Trigger__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>sf42_Account_Assign_Sales_Region__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account - Assign Sales Region</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf42_Account_Copy_Address_To_Contacts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account - Copy Address To Contacts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf42_Account_Set_Business_Unit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account - Set Business Unit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf42_Contact_Copy_Address_from_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact - Copy Address from Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf42_Contact_Set_Business_Unit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact - Set Business Unit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf42_Event_Copy_Type_from_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Event - Copy Type from Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf42_Event_Set_Business_Unit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Event - Set Business Unit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf42_Event_Update_Last_Visit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Event - Update Last Visit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf42_Task_Set_Business_Unit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Task - Set Business Unit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf42_Task_Set_Cal_Rep_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Task - Set Last Calibration/Repair Date</label>
        <type>Checkbox</type>
    </fields>
    <label>PT - Deactivate Trigger</label>
</CustomObject>